--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <audio src="https://github.com/CertainlyMush/Will-you-be-my-Valentine-/raw/refs/heads/main/blue">
+    <audio src="blue.mp3">
 </body>
 </html>
